# pxts

./: LICENSE  README.md  asset_delta_returns.py  pyproject.toml  roadmap_plots.md
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v0.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.1-MILESTONE-AUDIT.md  v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md
.planning/phases/01-test-suite/: 01-01-PLAN.md
.planning/phases/02-bug-fixes-and-dependencies/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/04-process-closure/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/05-bloomberg-bdh-historical-data-integration/: 05-02-SUMMARY.md
.planning/phases/07-interactive-plotly-time-series-charts/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  (+9 more)
examples/: demo.ipynb  demo.py  ois_curves.ipynb
examples/.ipynb_checkpoints/: demo-checkpoint.ipynb
examples/data/: sample.csv
src/pxts/: __init__.py  _backend.py  accessor.py  core.py  exceptions.py  io.py  plots.py  theme.py
src/pxts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  _verify_07_02.py  _verify_07_02_dual.py  _verify_07_03.py  conftest.py  test_accessor.py  test_bdh.py  test_core.py  test_io.py  test_mb.py  test_plots.py  test_theme.py  test_tsgrid.py
(+49 files in other folders)
